# Rust-Backend-Template-With-Auth-and-Bearer-Auth

./: .gitignore  Cargo.toml  README.md
src/: dbs.rs  handlers.rs  main.rs  middlewares.rs  models.rs
