[package]
name = "web3_project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
mongodb = "3.2.5"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = "1.47.1"
futures = "0.3.31"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
